// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Board view 1`] = `
{
  "lines": 2133,
  "sha256": "71ac019eeec4612bd97a4c8c9aa30ea9e137d95f0a9e69c5f8383210f8adbdc6",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Gantt view 1`] = `
{
  "lines": 1979,
  "sha256": "1887e706d5349e5b8faaeff6e451f6b14b97550ce092d03948a51bac833b2096",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Lookahead view 1`] = `
{
  "lines": 2224,
  "sha256": "614a3891edf74bd51e9fe7520ebc83d6ffca93309921c7917a2c9319f342e818",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Today view 1`] = `
{
  "lines": 2150,
  "sha256": "d271574fa4d0a30366481bb636de989559f96f7473a9e874027514595f56b10a",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /(tabs)/discover/schedule 1`] = `
{
  "lines": 503,
  "sha256": "77377832dab9bf9c57be72785bb8f23dd7a36f06582d522d4e7520b1c5621c0e",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /(tabs)/schedule (MobileScheduleScreen) 1`] = `
{
  "lines": 1774,
  "sha256": "7387be1478447ee2e11864de985447b57018ccd29afac2c5ba36ef268240f1f4",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /copilot-hub 1`] = `
{
  "lines": 541,
  "sha256": "6d57a3f07fe815de32c86d13a95bd54cd6ba08a2a0fc51a016b7033dbaecc58e",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /schedule-review with a draft 1`] = `
{
  "lines": 453,
  "sha256": "9d34772a964199ed2df24eea0dd769b9c1e09f6d29edff3b6f3cf63a7e00ff9e",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /schedule-wizard 1`] = `
{
  "lines": 1862,
  "sha256": "c446406149c4c4a9c97faf6d854c9432aba79f05a428a40aec098be9f0eae02d",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) AddTaskModal, open 1`] = `
{
  "lines": 111,
  "sha256": "6cc00608b6b70d4b71efdbde2ed2cd95ece5ef90455027efad0b2eda2b13f014",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) BaselineManagerModal, open 1`] = `
{
  "lines": 43,
  "sha256": "980a77d8987263ce374d8580209c38ecbc29a3fd38fd03f2c6fd5cb60152b116",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) COScheduleReflowPreviewModal, open 1`] = `
{
  "lines": 67,
  "sha256": "611521d39d34e21fe08283bfa9061c4d2e9439635f36cef4ceb45650bc7e872d",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ClosuresModal, open 1`] = `
{
  "lines": 186,
  "sha256": "9b23d8cf47d51a2c6769db45bbe5fcaf7b26092f9ad5d0b129a91e902dcd16cd",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) CriticalPathPanel, open 1`] = `
{
  "lines": 55,
  "sha256": "c547f6b5c0f23be5f1fe1c7026ca99b2a90b120ae71465ac31df660ad286d224",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ExportSheet, open 1`] = `
{
  "lines": 91,
  "sha256": "fc76e039d82dd48288aec4d15b5c4c842ec0f558ec5e7ede20c4fec5bd7554b2",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) LevelingPreviewModal, open 1`] = `
{
  "lines": 45,
  "sha256": "b5cba2aa788f95a030a7a854cb30d248368af45978062b70403ea970e0f1f81b",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) PredecessorPicker, open 1`] = `
{
  "lines": 72,
  "sha256": "563d57b257d32b8d81002b2619d4939b9b97e8a8147403194b3c2fc4059de149",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) QuickBuildModal, open 1`] = `
{
  "lines": 186,
  "sha256": "471f37a0888af9085356377b7c5f25111542711cd74951b68c8fa21270f90f8e",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleAuditModal, open 1`] = `
{
  "lines": 20,
  "sha256": "e7c1d0db29a2cbbca7242706432ab13550c4d45e236f703d035c728fbb3de6e5",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleHealthDetail, open 1`] = `
{
  "lines": 386,
  "sha256": "0274ace8bac60a52583e64ae8893bbb119c3a25aa03ec0a30afc713ec72a6c70",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleSettingsMenu, open 1`] = `
{
  "lines": 291,
  "sha256": "23116df5c8d1b970061739cb06f7a7c2d42c7dd47c9eda82d3936209da55f252",
}
`;
